fix: correção de analise de itens das cats e resultado de busca das cats utilizadas